--- a/packages/fed-react-comp/src/Counter/index.scss
+++ b/packages/fed-react-comp/src/Counter/index.scss
@@ -1,3 +1,5 @@
+@import '~antd/es/button/style/index.css';
+@import './CustomButton.scss';
 .counter-container {
   display: flex;
   align-items: center;
